# gladis

./: .gitignore  CMakeLists.txt  DEPLOYMENT.md  QUICK-START.md  bundle-app.sh  create-appimage.sh  deploy-cross-compile.sh  deploy.sh  gladis.ini  install-dependencies.sh  main.qml  qml.qrc  run.sh  sync-to-pi.ps1  sync-to-pi.sh
Components/: AlertApp.qml  AnimatedBorderBox.qml  BlankApp.qml  CarouselView.qml  CustomCursor.qml  GameCard.qml  HoursDisplay.qml  ImageApp.qml  NewGamesGrid.qml  PixmapScrollingText.qml  PixmapScrollingText_Test.qml  PixmapScrollingText_USAGE.md  PlayerStats.qml  ScrollingText.qml  SlidingPanel.qml  SwapImageAnimation.qml  TimerApp.qml  WelcomeApp.qml  WindshieldWiperImages.qml
Components/welcome-data/: facility_colors  user_data.json
src/: configmanager.cpp  configmanager.h  datamanager.cpp  datamanager.h  fileiohelper.cpp  fileiohelper.h  main.cpp
welcome-data/: facility_colors  facility_data.json  facility_name.txt  scroll_lower.txt  scroll_upper.txt  user_data.json
